Fixed floating issue on IE6 for google custom search. Related to: #Zope/ticket/1251

--- a/trunk/ALiSS_agents/ALiSS/css/aliss.css
+++ b/trunk/ALiSS_agents/ALiSS/css/aliss.css
@@ -89,3 +89,8 @@ ul.subalphabet_list li {
 .AlissRightContainer {
  width: 28%;
 }
+
+.gsc-query {
+ color: green;
+ font-weight: bold;
+}
